internal/compiler/gogen/testdata/invalid_conditional_controls/SwitchComparability.tue
<template>
	<template v-switch="selected">
		<p v-case="candidate">Struct case</p>
	</template>
	<template v-switch="buffer">
		<p v-case="candidateBuffer">Imported struct case</p>
	</template>
</template>

<script lang="go">
package app

import "bytes"

type Filter struct {
	Tags []string
}

type SwitchComparability struct {
	selected        Filter
	candidate       Filter
	buffer          bytes.Buffer
	candidateBuffer bytes.Buffer
}
</script>
